[workspace]

members = [
    "adder",
    "add-one",
    "add-two",
    "login",
    "server",
    "thread",
    "unsafe_demo",
    "basic",
    "collections",
    "crates_demo",
    "errors",
    "mysqlDemo",
    "redis",
    "fileread",
    "enumdemo",
    "term",
    "messages",
    "tcp_server",
]
