[package]
name = "elastic"
version = "0.1.0"
authors = ["Yaowenqiang <yaowenqiang111@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elastic = "*"
elastic_derive = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
