[package]
name = "login"
version = "0.1.0"
authors = ["yaowenqiang <yaowenqiang111@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.2"
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"